--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "cypress": "^12.5.1",
+    "cypress-xpath": "^2.0.1",
     "typescript": "^4.9.5"
   },
   "name": "cy-ts",
@@ -8,6 +9,7 @@
   "description": "cypress-course-joan",
   "main": "cypress.config.js",
   "dependencies": {
+    "@cypress/xpath": "^2.0.3",
     "aggregate-error": "^3.1.0",
     "ansi-colors": "^4.1.3",
     "ansi-escapes": "^4.3.2",
