retryability exercises added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
+        "classattr",
+        "clientdelay",
         "dependecy",
         "dynamicid",
         "Iframes",
+        "loaddelay",
         "Mochawesome",
+        "progressbar",
         "retriability",
         "textinput"
     ]
