hover & dynamic tables exercises added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "clientdelay",
         "dependecy",
         "dynamicid",
+        "dynamictable",
         "Iframes",
         "loaddelay",
         "Mochawesome",
