--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "cypress": "^12.5.1",
+    "cypress-real-events": "^1.7.6",
     "cypress-xpath": "^2.0.1",
     "typescript": "^4.9.5"
   },
