--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "redirector",
         "retriability",
         "rightclick",
-        "textinput"
+        "textinput",
+        "Toolsqa",
+        "Udemy"
     ]
 }
